--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,12 +75,13 @@ set(CPP_FILES
 find_package(glfw3 REQUIRED)
 find_package(glm REQUIRED)
 find_package(nlohmann_json REQUIRED)
-find_package(imgui REQUIRED)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/source/external/imgui)
 
 add_executable(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
 
 # Link the debug and release libraries to the project
-target_link_libraries( ${PROJECT_NAME} PRIVATE ${VULKAN_LIB_LIST} glfw nlohmann_json::nlohmann_json imgui::imgui)
+target_link_libraries( ${PROJECT_NAME} PRIVATE ${VULKAN_LIB_LIST} glfw nlohmann_json::nlohmann_json imgui)
 	target_include_directories( ${PROJECT_NAME} PRIVATE 
 	${GLM_INCLUDE_DIRS} 
 	${GLFW_INCLUDE_DIRS} 
