--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,15 +106,23 @@ file(GLOB_RECURSE VERT_SHADER_SOURCES ${SHADER_PATH}/*.vert)
 file(GLOB_RECURSE FRAG_SHADER_SOURCES ${SHADER_PATH}/*.frag)
 
 foreach(cur_path IN LISTS VERT_SHADER_SOURCES)
-	string(REPLACE ".vert" "_vert.spv" CURRENT_OUT_NAME ${cur_path})
-	add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslangValidator.exe -V ${cur_path} -o ${CURRENT_OUT_NAME})
-	message(STATUS ${CURRENT_OUT_NAME})
+	get_filename_component(SHADER_FILE_NAME ${cur_path} NAME)
+	string(REPLACE ".vert" "" OUTPUT_DIRECTORY_NAME ${SHADER_FILE_NAME})
+	get_filename_component(SHADER_FILE_PATH ${cur_path} DIRECTORY)
+	string(REPLACE "source" "compiled/${OUTPUT_DIRECTORY_NAME}" OUTPUT_DIRECTORY_PATH ${SHADER_FILE_PATH})
+	list(APPEND OUTPUT_DIRECTORY_PATH "/vert.spv")
+	add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslangValidator.exe -V ${cur_path} -o ${OUTPUT_DIRECTORY_PATH})
+	message(STATUS ${OUTPUT_DIRECTORY_PATH})
 endforeach()
 
 foreach(cur_path IN LISTS FRAG_SHADER_SOURCES)
-	string(REPLACE ".frag" "_frag.spv" CURRENT_OUT_NAME ${cur_path})
-	add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslangValidator.exe -V ${cur_path} -o ${CURRENT_OUT_NAME})
-	message(STATUS ${CURRENT_OUT_NAME})
+	get_filename_component(SHADER_FILE_NAME ${cur_path} NAME)
+	string(REPLACE ".frag" "" OUTPUT_DIRECTORY_NAME ${SHADER_FILE_NAME})
+	get_filename_component(SHADER_FILE_PATH ${cur_path} DIRECTORY)
+	string(REPLACE "source" "compiled/${OUTPUT_DIRECTORY_NAME}" OUTPUT_DIRECTORY_PATH ${SHADER_FILE_PATH})
+	list(APPEND OUTPUT_DIRECTORY_PATH "/frag.spv")
+	add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslangValidator.exe -V ${cur_path} -o ${OUTPUT_DIRECTORY_PATH})
+	message(STATUS ${OUTPUT_DIRECTORY_PATH})
 endforeach()
 
 
