--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,9 @@ foreach(cur_path IN LISTS VERT_SHADER_SOURCES)
 	string(REPLACE ".vert" "" OUTPUT_DIRECTORY_NAME ${SHADER_FILE_NAME})
 	get_filename_component(SHADER_FILE_PATH ${cur_path} DIRECTORY)
 	string(REPLACE "source" "compiled/${OUTPUT_DIRECTORY_NAME}" OUTPUT_DIRECTORY_PATH ${SHADER_FILE_PATH})
+	if(NOT EXISTS ${OUTPUT_DIRECTORY_PATH})
+	file(MAKE_DIRECTORY ${OUTPUT_DIRECTORY_PATH})
+	endif()
 	set(OUTPUT_DIRECTORY_PATH ${OUTPUT_DIRECTORY_PATH}/vert.spv)
 	add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslangValidator.exe -V ${cur_path} -o ${OUTPUT_DIRECTORY_PATH})
 	message(STATUS "executing glslangValidator.exe -V ${cur_path} -o ${OUTPUT_DIRECTORY_PATH}")
@@ -120,6 +123,9 @@ foreach(cur_path IN LISTS FRAG_SHADER_SOURCES)
 	string(REPLACE ".frag" "" OUTPUT_DIRECTORY_NAME ${SHADER_FILE_NAME})
 	get_filename_component(SHADER_FILE_PATH ${cur_path} DIRECTORY)
 	string(REPLACE "source" "compiled/${OUTPUT_DIRECTORY_NAME}" OUTPUT_DIRECTORY_PATH ${SHADER_FILE_PATH})
+	if(NOT EXISTS ${OUTPUT_DIRECTORY_PATH})
+	file(MAKE_DIRECTORY ${OUTPUT_DIRECTORY_PATH})
+	endif()
 	set(OUTPUT_DIRECTORY_PATH ${OUTPUT_DIRECTORY_PATH}/frag.spv)
 	add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslangValidator.exe -V ${cur_path} -o ${OUTPUT_DIRECTORY_PATH})
 	message(STATUS "executing glslangValidator.exe -V ${cur_path} -o ${OUTPUT_DIRECTORY_PATH}")
