--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ endif()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/core)
 
 file(GLOB_RECURSE CPP_FILES_CORE ${CMAKE_CURRENT_SOURCE_DIR}/source/core/*.cpp)
+file(GLOB_RECURSE CPP_FILES_UTIL ${CMAKE_CURRENT_SOURCE_DIR}/source/util/*.cpp)
 file(GLOB_RECURSE CPP_FILES_FS ${CMAKE_CURRENT_SOURCE_DIR}/source/filesystem/*.cpp)
 file(GLOB_RECURSE CPP_FILES_SERIALIZE ${CMAKE_CURRENT_SOURCE_DIR}/source/serializer/*.cpp)
 file(GLOB_RECURSE HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/core/*.h)
@@ -67,6 +68,7 @@ file(GLOB_RECURSE CPP_FILES_IMGUI ${CMAKE_CURRENT_SOURCE_DIR}/source/external/im
 set(CPP_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 	${CPP_FILES_CORE}
+	${CPP_FILES_UTIL}
 	${CPP_FILES_FS}
 	${CPP_FILES_SERIALIZE}
 	${CPP_FILES_IMGUI}
