material creation refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ foreach(cur_path IN LISTS VERT_SHADER_SOURCES)
 	get_filename_component(SHADER_FILE_NAME ${cur_path} NAME)
 	string(REPLACE ".vert" "" OUTPUT_DIRECTORY_NAME ${SHADER_FILE_NAME})
 	get_filename_component(SHADER_FILE_PATH ${cur_path} DIRECTORY)
-	string(REPLACE "source" "compiled/${OUTPUT_DIRECTORY_NAME}" OUTPUT_DIRECTORY_PATH ${SHADER_FILE_PATH})
+	set(OUTPUT_DIRECTORY_PATH "${SHADER_FILE_PATH}/${OUTPUT_DIRECTORY_NAME}")
 	if(NOT EXISTS ${OUTPUT_DIRECTORY_PATH})
 	file(MAKE_DIRECTORY ${OUTPUT_DIRECTORY_PATH})
 	endif()
@@ -124,7 +124,7 @@ foreach(cur_path IN LISTS FRAG_SHADER_SOURCES)
 	get_filename_component(SHADER_FILE_NAME ${cur_path} NAME)
 	string(REPLACE ".frag" "" OUTPUT_DIRECTORY_NAME ${SHADER_FILE_NAME})
 	get_filename_component(SHADER_FILE_PATH ${cur_path} DIRECTORY)
-	string(REPLACE "source" "compiled/${OUTPUT_DIRECTORY_NAME}" OUTPUT_DIRECTORY_PATH ${SHADER_FILE_PATH})
+	set(OUTPUT_DIRECTORY_PATH "${SHADER_FILE_PATH}/${OUTPUT_DIRECTORY_NAME}")
 	if(NOT EXISTS ${OUTPUT_DIRECTORY_PATH})
 	file(MAKE_DIRECTORY ${OUTPUT_DIRECTORY_PATH})
 	endif()
