--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "source/external/glslang"]
-	path = source/external/glslang
-	url = https://github.com/KhronosGroup/glslang.git
 [submodule "source/external/glm"]
 	path = source/external/glm
 	url = https://github.com/g-truc/glm.git
 [submodule "source/external/glfw"]
 	path = source/external/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "source/external/tinygltf"]
+	path = source/external/tinygltf
+	url = https://github.com/syoyo/tinygltf.git
