added editor mode and game mode. In editor mode, i using another extent

--- a/assets/engine/config.json
+++ b/assets/engine/config.json
@@ -38,8 +38,9 @@
             "ray_tracing": false
         }
     },
-    "scene":
+    "engine":
     {
-        "default_scene": "sponza_scene.json"
+        "mode": "game",
+        "start_scene": "scene.json"
     }
 }
