--- a/assets/engine/config.json
+++ b/assets/engine/config.json
@@ -40,6 +40,6 @@
     "engine":
     {
         "mode": "editor",
-        "start_scene": "sponza_scene.json"
+        "start_scene": "scene.json"
     }
 }
