--- a/assets/engine/config.json
+++ b/assets/engine/config.json
@@ -28,7 +28,8 @@
             "multi_viewport": true,
             "geometry_shader": true,
             "fragment_stores_and_atomics": true,
-            "logic_op": true
+            "logic_op": true,
+            "tesselation_shader": true
         },
         "graphics":
         {
