Don't understand why shadows not projecting

--- a/assets/engine/config.json
+++ b/assets/engine/config.json
@@ -29,7 +29,8 @@
             "geometry_shader": true,
             "fragment_stores_and_atomics": true,
             "logic_op": true,
-            "tesselation_shader": true
+            "tesselation_shader": true,
+            "depth_clamp": true
         },
         "graphics":
         {
