--- a/assets/engine/config.json
+++ b/assets/engine/config.json
@@ -17,7 +17,7 @@
             "engine_version": 4202496,
             "api_version": 4202496
         },
-        "validation": false,
+        "validation": true,
         "validation_layers": ["VK_LAYER_KHRONOS_validation"],
         "device_extensions": ["VK_KHR_swapchain", "VK_KHR_maintenance1"],
         "device_features":
@@ -30,7 +30,8 @@
             "fragment_stores_and_atomics": true,
             "logic_op": true,
             "tesselation_shader": true,
-            "depth_clamp": true
+            "depth_clamp": true,
+            "image_cube_array": true
         },
         "graphics":
         {
@@ -41,7 +42,7 @@
     },
     "engine":
     {
-        "mode": "game",
+        "mode": "editor",
         "start_scene": "scene.json"
     }
 }
