--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,18 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin/relea
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
+if(MSVC)
+	add_compile_options(/W4 /bigobj -D_WIN32_WINNT=0x0601)
+else()
+	set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic")
+endif()
+
 file(GLOB_RECURSE CPP_FILES_CORE ${CMAKE_CURRENT_SOURCE_DIR}/source/core/*.cpp)
 file(GLOB_RECURSE CPP_FILES_EDITOR ${CMAKE_CURRENT_SOURCE_DIR}/source/editor/*.cpp)
 file(GLOB_RECURSE CPP_FILES_UTIL ${CMAKE_CURRENT_SOURCE_DIR}/source/util/*.cpp)
 file(GLOB_RECURSE CPP_FILES_FS ${CMAKE_CURRENT_SOURCE_DIR}/source/filesystem/*.cpp)
 file(GLOB_RECURSE CPP_FILES_SERIALIZE ${CMAKE_CURRENT_SOURCE_DIR}/source/serializer/*.cpp)
+file(GLOB_RECURSE CPP_FILES_SCRIPTING ${CMAKE_CURRENT_SOURCE_DIR}/source/scripting/*.cpp)
 file(GLOB_RECURSE H_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.h)
 file(GLOB_RECURSE HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.hpp)
 file(GLOB_RECURSE CPP_FILES_IMGUI ${CMAKE_CURRENT_SOURCE_DIR}/source/external/imgui/*.cpp)
@@ -34,6 +41,7 @@ set(CPP_FILES
 	${CPP_FILES_UTIL}
 	${CPP_FILES_FS}
 	${CPP_FILES_SERIALIZE}
+    ${CPP_FILES_SCRIPTING}
 	${CPP_FILES_IMGUI}
 )
 
@@ -86,6 +94,7 @@ target_include_directories( ${PROJECT_NAME} PRIVATE
     ${GLFW_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/external/
+    ${CMAKE_CURRENT_SOURCE_DIR}/external/ChaiScript/include
     ${CMAKE_CURRENT_SOURCE_DIR}/source/
     ${CMAKE_CURRENT_SOURCE_DIR}/source/core/
     ${IMGUI_INCLUDE_DIR}
