--- a/assets/engine/config.json
+++ b/assets/engine/config.json
@@ -43,6 +43,6 @@
     "engine":
     {
         "mode": "editor",
-        "start_scene": "sponza_scene.json"
+        "start_scene": "voxel_scene.json"
     }
 }
